tailwind 네이버 로그인 실습

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="/views/example-01.html" class="inline-block text-sm">TailwindCSS 예제 1</a></li>
       <li><a href="/views/example-02.html" class="inline-block text-sm">TailwindCSS 예제 2</a></li>
+      <li><a href="/views/example-03.html" class="inline-block text-sm">네이버 로그인 폼</a></li>
     </ul>
     
   </div>
