--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
       <li><a href="/views/example-01.html" class="inline-block text-sm">TailwindCSS 예제 1</a></li>
       <li><a href="/views/example-02.html" class="inline-block text-sm">TailwindCSS 예제 2</a></li>
       <li><a href="/views/example-03.html" class="inline-block text-sm">네이버 로그인 폼</a></li>
+      <li><a href="/views/example-04.html" class="inline-block text-sm">커스텀 유틸리티 클래스(shape outside)</a></li>
+      <li><a href="/views/example-05.html" class="inline-block text-sm">아바타</a></li>
+
     </ul>
     
   </div>
