애플 구현 일부 완료

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       <li><a href="/views/example-03.html" class="inline-block text-sm">네이버 로그인 폼</a></li>
       <li><a href="/views/example-04.html" class="inline-block text-sm">커스텀 유틸리티 클래스(shape outside)</a></li>
       <li><a href="/views/example-05.html" class="inline-block text-sm">아바타</a></li>
+      <li><a href="/views/example-06.html" class="inline-block text-sm">애플 푸터</a></li>
+      <li><a href="/views/example-07.html" class="inline-block text-sm">그리드 레이아웃(예제)</a></li>
 
     </ul>
     
